Fix a minor spacing issue for primary navigation items on desktop

--- a/source/assets/stylesheets/structures/_navigation.sass
+++ b/source/assets/stylesheets/structures/_navigation.sass
@@ -147,6 +147,7 @@
       height: $navigation-height
       line-height: $navigation-height
       margin-left: $b-space-l
+      padding: 0
       &:hover,
       &:focus
         color: lighten($c-accent, 5%)
